fixed connections to new db model

--- a/client/views/search.html
+++ b/client/views/search.html
@@ -54,7 +54,7 @@
                 </tr>
             </thead>
                 <tr ng-repeat="user in searchCtrl.users">
-                    <!-- <td>{{ user.uid }}</td> -->
+                    <!-- <td>{{ user.id }}</td> -->
                     <td>{{ user.firstname }}</td>
                     <td>{{ user.lastname }}</td>
                     <td>{{ user.email }}</td>
