--- a/client/views/add.html
+++ b/client/views/add.html
@@ -44,7 +44,7 @@
             </select>
     </div>
 
-    <label>Qualifications</label>
+    <!-- <label>Qualifications</label>
     <div class="form-group">
         <label class='checkbox-inline'>
             <input type='checkbox'
@@ -101,13 +101,13 @@
                     ng-model="addCtrl.user.qualify.F008">
                     Barre
         </label>
-    </div>
+    </div> -->
 
     <div class="form-group">
         <select class="form-control" id="status" required ng-model="addCtrl.user.status" ng-init="addCtrl.user.status = null">
                         <option ng-value="null" hidden>Status</option>
-                        <option ng-value="0">Active</option>
-                        <option ng-value="1">Unavailable</option>
+                        <option ng-value="1">Active</option>
+                        <option ng-value="0">Unavailable</option>
                         <option ng-value="2">Inactive</option>
                 </select>
     </div>
