--- a/client/views/list.html
+++ b/client/views/list.html
@@ -67,16 +67,16 @@
                     </tr>
             </thead>
             <tr ng-repeat="user in listCtrl.users">
-                <td>{{ user.uid }}</td>
+                <td>{{ user.id }}</td>
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
                 <td>{{ user.email }}</td>
                 <td><span ng-repeat="qualify in user.userqualifies">
                     [{{ qualify.qualification.q_name }}]</span></td>
                 <td class="text-center">
-                <button type="button" class='btn btn-success btn-xs' ng-click="listCtrl.viewUser(user.uid)"><span class="glyphicon glyphicon-eye-open"></span> View Trainer</button>
+                <button type="button" class='btn btn-success btn-xs' ng-click="listCtrl.viewUser(user.id)"><span class="glyphicon glyphicon-eye-open"></span> View Trainer</button>
                         
-                <!-- <a class='btn btn-success btn-xs' href="#" ng-click="listCtrl.viewUser(user.uid)"><span class="glyphicon glyphicon-eye-open"></span> View</a> -->
+                <!-- <a class='btn btn-success btn-xs' href="#" ng-click="listCtrl.viewUser(user.id)"><span class="glyphicon glyphicon-eye-open"></span> View</a> -->
                 <!-- <button type="button" class='btn btn-info btn-xs' href="#" ng-click="listCtrl.editUser()"><span class="glyphicon glyphicon-edit"></span> Edit</button>
                 <button type="button" class="btn btn-danger btn-xs" href="#"  ng-click="listCtrl.deleteUser()"><span class="glyphicon glyphicon-remove"></span> Delete</button> -->
                 </td>
