--- a/client/views/view.html
+++ b/client/views/view.html
@@ -27,7 +27,7 @@
                 <div class="form-group">
                         <label class="col-lg-3 control-label">User ID:</label>
                         <div class="col-lg-8">
-                            <input class="form-control" type="text" readonly ng-model="viewCtrl.user.uid">
+                            <input class="form-control" type="text" readonly ng-model="viewCtrl.user.id">
                         </div>
                 </div>  
                 <div class="form-group">
@@ -53,8 +53,8 @@
                     <div class="col-md-8">
                         <select class="form-control" id="status" required ng-model="viewCtrl.user.status">
                             <option id="header" ng-value="null">Choose One</option>
-                            <option ng-value="0">Active</option>
-                            <option ng-value="1">Unavailable</option>
+                            <option ng-value="1">Active</option>
+                            <option ng-value="0">Unavailable</option>
                             <option ng-value="2">Inactive</option>
                         </select>
                     </div>
