--- a/client/views/trainerdash.html
+++ b/client/views/trainerdash.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="form-group">
                     <div class="input-group col-md-12">
-                        <input class="form-control usrscrhfrm" id="searchString" type="text" name="searchString" ng-model = "listCtrl.keyword" placeholder="Search for a user" />
+                        <input class="form-control usrscrhfrm" id="searchString" type="text" name="searchString" ng-model = "classesCtrl.keyword" placeholder="Search for a class" />
                         <span class="input-group-btn">
                             <button class="btn btn-success usrsrchbtn" type="submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></button>
                         </span>
@@ -31,6 +31,51 @@
             
         </form>
         <!-- End of Search Form -->
-</div>
 
-<button type="button" class="btn btn-primary btn-xs addnew pull-left" ng-click="trainerdashCtrl.addClass()"><span class="glyphicon glyphicon-plus-sign"></span>Add a New Class</button>
+        <div class="row">
+            <button type="button" class="btn btn-primary btn-xs addnew2 pull-left" ng-click="trainerdashCtrl.addClass()"><span class="glyphicon glyphicon-plus-sign"></span>Add a New Class</button>
+        </div>
+
+        <div class="row" ng-repeat="classes in classesCtrl.classes">
+            <div class="panel panel-primary trainer-panel">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <b>{{class.name}}</b>
+                        </div>
+                        <div class="col-lg-6">
+                            <button type="button" class="btn btn-success btn-xs pull-right" ng-click="trainerdashCtrl.addClass()"><span class="glyphicon glyphicon-eye-open"></span>View Class Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <b>Category:</b> {{class.category}}
+                        </div>
+                        <div class="col-lg-4">
+                            <b>Class Size:</b> {{class.minsize/class.maxsize}}
+                        </div>
+                        <div class="col-lg-4">
+                            <b>Status:</b> {{class.status}}
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <b>Created:</b> {{class.createdAt}}
+                        </div>
+                        <div class="col-lg-4">
+                            <b>Updated:</b> {{class.updatedAt}}
+                        </div>
+                        <div class="col-lg-4">
+                            <b>District:</b> {{class.neighbourhood}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+</div>
