--- a/client/views/add.html
+++ b/client/views/add.html
@@ -24,6 +24,10 @@
     </div>
 
     <div class="form-group">
+        <input type="password" data-minlength="4" class="form-control" id="confirmPassword" placeholder="Please confirm your password" required ng-model="addCtrl.user.confirmpassword">
+    </div>
+
+    <div class="form-group">
         <div>
             <input class="form-control" id="name" name="firstname" type="text" placeholder="First Name" required ng-model="addCtrl.user.firstname"/>
         </div>
@@ -43,65 +47,6 @@
                     <option ng-value="0">Admin</option>
             </select>
     </div>
-
-    <!-- <label>Qualifications</label>
-    <div class="form-group">
-        <label class='checkbox-inline'>
-            <input type='checkbox'
-                   name="qualifications"
-                   ng-model="addCtrl.user.qualify.F001">
-                   Crossfit
-        </label>
-
-        <label class='checkbox-inline'>
-            <input type='checkbox'
-                    name="qualifications"
-                    ng-model="addCtrl.user.qualify.F002">
-                    MMA
-        </label>
-
-        <label class='checkbox-inline'>
-            <input type='checkbox'
-                    name="qualifications"
-                    ng-model="addCtrl.user.qualify.F003">
-                    Core
-        </label>
-
-        <label class='checkbox-inline'>
-            <input type='checkbox'
-                    name="qualifications"
-                    ng-model="addCtrl.user.qualify.F004">
-                    Weights
-        </label>
-
-        <label class='checkbox-inline'>
-            <input type='checkbox'
-                    name="qualifications"
-                    ng-model="addCtrl.user.qualify.F005">
-                    Spinning
-        </label>
-        <br>
-        <label class='checkbox-inline'>
-            <input type='checkbox'
-                    name="qualifications"
-                    ng-model="addCtrl.user.qualify.F006">
-                    Aerobics
-        </label>
-
-        <label class='checkbox-inline'>
-            <input type='checkbox'
-                    name="qualifications"
-                    ng-model="addCtrl.user.qualify.F007">
-                    Boxing
-        </label>
-
-        <label class='checkbox-inline'>
-            <input type='checkbox'
-                    name="qualifications"
-                    ng-model="addCtrl.user.qualify.F008">
-                    Barre
-        </label>
-    </div> -->
 
     <div class="form-group">
         <select class="form-control" id="status" required ng-model="addCtrl.user.status" ng-init="addCtrl.user.status = null">
