--- a/client/views/trainerdash.html
+++ b/client/views/trainerdash.html
@@ -44,7 +44,7 @@
                             <b>{{class.name}}</b>
                         </div>
                         <div class="col-lg-6">
-                            <button type="button" class="btn btn-success btn-xs pull-right" ng-click="trainerdashCtrl.addClass()"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
+                            <button type="button" class="btn btn-success btn-xs pull-right" ng-click="trainerdashCtrl.viewClass()"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
                         </div>
                     </div>
                 </div>
