--- a/client/views/add.html
+++ b/client/views/add.html
@@ -9,7 +9,7 @@
 </nav>
     
 <div>
-    <h4 class="sah4">Add Trainer</h4>
+    <h4 class="sah4">Add User</h4>
 </div>
 
 <div class="col-sm-2 col-lg-4"></div>
