login profile leads to various dashboards

--- a/client/views/list.html
+++ b/client/views/list.html
@@ -54,7 +54,7 @@
         <table class="table table-striped custab">
             <thead>
                 <!-- <a ng-href="#" ng-click="listCtrl.addUser()" class="btn btn-primary btn-xs addnew pull-right"><span class="glyphicon glyphicon-plus-sign"></span> Add a New Trainer</a>  -->
-                <button type="button" class="btn btn-primary btn-xs addnew pull-left" ng-click="listCtrl.addUser()"><span class="glyphicon glyphicon-plus-sign"></span>Add a New Trainer</button>
+                <button type="button" class="btn btn-primary btn-xs addnew pull-left" ng-click="listCtrl.addUser()"><span class="glyphicon glyphicon-plus-sign"></span>Add a User</button>
                     <tr>
                         <th>User ID</th>
                         <th>First Name</th>
