updates to AddClass flow

--- a/client/views/trainerreg.html
+++ b/client/views/trainerreg.html
@@ -52,6 +52,6 @@
                 <button type="submit" class="btn btn-primary sign-in pull-right">Register</button>
             </div>
         </form>
-        <!-- <div ng-show="trainerRegCtrl.message">{{ trainerRegCtrl.message }}</div> -->
+        <div ng-show="trainerRegCtrl.message">{{ trainerRegCtrl.message }}</div>
     </div>
 </div>
