--- a/client/views/addclass.html
+++ b/client/views/addclass.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
     
         <div class="navbar-header nav navbar-nav navbar-left">
-            <h3>Welcome, {{user.firstname}}</h3>
+            <h3>Welcome, {{addClassCtrl.user.firstname}}</h3>
         </div>
     
     </div>
@@ -15,19 +15,21 @@
       
 <div class="container">
     <div class="row">
-        <form name="addClassForm" ng-submit="addclassCtrl.addClass()">
+        <form name="addClassForm" ng-submit="addClassCtrl.addClass()">
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="classname">Class Name</label>
-                <input class="form-control" id="classname" name="classname" type="text" placeholder="Class Name" required ng-model="addclassCtrl.class.name"/>
+                <input class="form-control" id="classname" name="classname" type="text" placeholder="Class Name" required ng-model="addClassCtrl.class.name"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="details">Class Details</label>
-                <input class="form-control" id="details" name="details" type="text" placeholder="Class Details" required ng-model="addclassCtrl.class.details"/>
+                <!-- <input class="form-control" id="details" name="details" type="textarea" placeholder="Class Details" required ng-model="addClassCtrl.class.details"> -->
+                <textarea form ="addClassForm" class="form-control" id="details" name="details" rows="4" type="text" wrap="soft" placeholder="Add a description to make your class inviting and discoverable&#10;(e.g. An hour-long brutal X-fit workout to test the limits of your strength, speed and endurance)" required ng-model="addClassCtrl.class.details"></textarea>
             </div>
+
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="category">Category</label>
-                <select class="form-control" id="category" required ng-model="addclassCtrl.class.category" ng-init="addclassCtrl.class.category = null">
+                <select class="form-control" id="category" required ng-model="addClassCtrl.class.category" ng-init="addClassCtrl.class.category = null">
                     <option ng-value="null" hidden>Category</option>
                     <option>Crossfit</option>
                     <option>Core</option>
@@ -38,64 +40,88 @@
                 </select>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="district">District</label>
-                <input class="form-control" id="neighbourhood" name="neighbourhood" type="text" placeholder="District or neighbourhood (i.e, Bedok, Tampines)" required ng-model="addclassCtrl.class.neighbourhood"/>
+                <label for="addrname">Name of Venue</label>
+                <input class="form-control" id="addrname" name="addrname" type="text" placeholder="Name of Location (e.g. Studio or Gym name)" required ng-model="addClassCtrl.class.addr_name"/>
             </div>
+
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="address">Address</label>
-                <input class="form-control" id="address" name="address" type="text" placeholder="Address of Class" required ng-model="addclassCtrl.class.address"/>
+                <label for="address1">Address</label>
+                <input class="form-control" id="address1" name="address1" type="text" placeholder="Address line 1" required ng-model="addClassCtrl.class.address1"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="postcode">Postal Code</label>
-                <input class="form-control" id="postcode" name="postcode" type="number" placeholder="Postal Code" min="6" max="6" required ng-model="addclassCtrl.class.postcode"/>
+                <label for="address2">Address</label>
+                <input class="form-control" id="address2" name="address2" type="text" placeholder="Address line 2" ng-model="addClassCtrl.class.address2"/>
             </div>
+
+            <div class="clearfix"></div>
+            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <label for="postcode">Postal Code</label>
+                <input class="form-control" id="postcode" name="postcode" type="text" placeholder="Postal Code" required ng-model="addClassCtrl.class.postcode"/>
+            </div>
+            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <label for="district">District</label>
+                <input class="form-control" id="neighbourhood" name="neighbourhood" type="text" placeholder="District or neighbourhood (e.g. Bedok, Tampines)" required ng-model="addClassCtrl.class.neighbourhood"/>
+            </div>
+
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="datetime">Date and Time of Class</label>
                 <div>
-                <input class="form-control" id='datetimepicker4' name="start_time" type="text" placeholder="Date and Time of Class"  required ng-model="addclassCtrl.class.start_time"/>
+                    <input class="form-control" id='datetimepicker' name="datetime" type="text" data-date-format="YYYY:MM:DD hh:mm:ss" required ng-model="addClassCtrl.class.start_time"/>
                 </div>
                 <script type="text/javascript">
                     $(function () {
-                    $('#datetimepicker4').datetimepicker();
-                });
+                        $('#datetimepicker').datetimepicker();
+                    });
                 </script>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <label for="duration">Duration of Class</label>
-                <input class="form-control" id="duration" name="duration" type="number" placeholder="Duration of Class" min="1" max="11" required ng-model="addclassCtrl.class.duration"/>
+                <label for="duration">Duration of Class (in minutes)</label>
+                <input class="form-control" id="duration" name="duration" type="number" ng-init="addClassCtrl.class.duration=60" min="30" max="180" required ng-model="addClassCtrl.class.duration"/>
             </div>
+
             <div class="clearfix"></div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="minsize">Minimum Class Size</label>
-                <input class="form-control" id="minsize" name="minsize" type="number" placeholder="Minimum Class Size" min="1" max="100" required ng-model="addclassCtrl.class.minsize"/>
+                <input class="form-control" id="minsize" name="minsize" type="number" ng-init="addClassCtrl.class.minsize=1" min="1" max="100" required ng-model="addClassCtrl.class.minsize"/>
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="maxsize">Maximum Class Size</label>
-                <input class="form-control" id="maxsize" name="maxsize" type="number" placeholder="Maximum Class Size" min="1" max="100" required ng-model="addclassCtrl.class.maxsize"/>
+                <input class="form-control" id="maxsize" name="maxsize" type="number" ng-init="addClassCtrl.class.maxsize=1" min="1" max="100" required ng-model="addClassCtrl.class.maxsize"/>
             </div>
+
             <div class="clearfix"></div>
-            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="remarks">Remarks</label>
-                <textarea class="form-control" rows="5" id="instructions" name="instructions" type="text" placeholder="Remarks (i.e, bring your own towel)"  ng-model="addclassCtrl.class.instructions"></textarea>
+                <textarea class="form-control" rows="5" id="instructions" name="instructions" type="text" wrap="soft" placeholder="Remarks (e.g. Bring your own towel, or Ask your doctor if there are any precautions you should take)" ng-model="addClassCtrl.class.instructions"></textarea>
             </div>
+            <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <label for="category">Class Status</label>
+                <select class="form-control" id="status" required ng-model="addClassCtrl.class.status" ng-init="addClassCtrl.class.status = null">
+                    <option ng-value="null" hidden>Status</option>
+                    <option ng-value="1">Active</option>
+                    <option ng-value="0">Unavailable</option>
+                    <option ng-value="2">Inactive</option>
+                </select>
+            </div>
+
             <div class="clearfix"></div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <button type="submit" class="btn btn-block btn-success add-new">Create New Class</button>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <button type="button" class="btn btn-block btn-danger" ui-sref="traindash">Cancel</button>
+                <button type="button" class="btn btn-block btn-danger" ui-sref="traindash({trainerId: addClassCtrl.class.creator_id})">Cancel</button>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <button type="button" class="btn btn-block btn-info" ng-show="addclassCtrl.message" ng-click="addclassCtrl.addAnother()">Add Another</button>
+                <button type="button" class="btn btn-block btn-info" ng-show="addClassCtrl.message" ng-click="addClassCtrl.addAnother()">Add Another</button>
             </div>
         </form>
         <div class="clearfix"></div>
 
         <br /><br />
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <div ng-show="addclassCtrl.message">{{ addclassCtrl.message }}</div>
+                <div ng-show="addClassCtrl.message">{{ addClassCtrl.message }}</div>
             </div>
     </div>
 </div>
