--- a/client/views/trainerdash.html
+++ b/client/views/trainerdash.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
 
         <div class="navbar-header nav navbar-nav navbar-left">
-                <h3>Welcome, {{user.firstname}}</h3>
+                <h3>Welcome, {{trainerDashCtrl.user.firstname}}</h3>
         </div>
 
     </div>
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="form-group">
                     <div class="input-group col-md-12">
-                        <input class="form-control usrscrhfrm" id="searchString" type="text" name="searchString" ng-model = "classesCtrl.keyword" placeholder="Search for a class" />
+                        <input class="form-control usrscrhfrm" id="searchString" type="text" name="searchString" ng-model = "trainerDashCtrl.keyword" placeholder="Search for a class" />
                         <span class="input-group-btn">
                             <button class="btn btn-success usrsrchbtn" type="submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></button>
                         </span>
@@ -33,10 +33,10 @@
         <!-- End of Search Form -->
 
         <div class="row">
-            <button type="button" class="btn btn-primary btn-xs addnew2 pull-left" ng-click="trainerdashCtrl.addClass()"><span class="glyphicon glyphicon-plus-sign"></span> Add a New Class</button>
+            <button type="button" class="btn btn-primary btn-xs addnew2 pull-left" ng-click="trainerDashCtrl.addClass(trainerDashCtrl.user.id)"><span class="glyphicon glyphicon-plus-sign"></span> Add a New Class</button>
         </div>
 
-        <div class="row" ng-repeat="classes in classesCtrl.classes">
+        <div class="row" ng-repeat="class in trainerDashCtrl.classes">
             <div class="panel panel-primary trainer-panel">
                 <div class="panel-heading">
                     <div class="row">
@@ -44,7 +44,7 @@
                             <b>{{class.name}}</b>
                         </div>
                         <div class="col-lg-6">
-                            <button type="button" class="btn btn-success btn-xs pull-right" ng-click="trainerdashCtrl.viewClass()"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
+                            <button type="button" class="btn btn-success btn-xs pull-right" ng-click="trainerDashCtrl.viewClass(class.id)"><span class="glyphicon glyphicon-eye-open"></span> View Class Details</button>
                         </div>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                             <b>Category:</b> {{class.category}}
                         </div>
                         <div class="col-lg-4">
-                            <b>Class Size:</b> {{class.minsize/class.maxsize}}
+                            <b>Class Size:</b> {{class.minsize}}/{{class.maxsize}}
                         </div>
                         <div class="col-lg-4">
                             <b>Status:</b> {{class.status}}
