--- a/client/views/addclass.html
+++ b/client/views/addclass.html
@@ -68,13 +68,8 @@
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="datetime">Date and Time of Class</label>
                 <div>
-                    <input class="form-control" id='datetimepicker' name="datetime" type="text" data-date-format="YYYY:MM:DD hh:mm:ss" required ng-model="addClassCtrl.class.start_time"/>
-                </div>
-                <script type="text/javascript">
-                    $(function () {
-                        $('#datetimepicker').datetimepicker();
-                    });
-                </script>
+                    <input class="form-control" id='datetimepicker' name="datetime" type="text" required datetimez="datePickerOptions" ng-model="addClassCtrl.class.start_time"/>
+                </div>               
             </div>
             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <label for="duration">Duration of Class (in minutes)</label>
